[package]
name = "defer-lite"
version = "1.0.0"
authors = ["Rodrigo Cesar de Freitas Dias <rcesar@gmail.com>"]
description = "A lightweight implementation of Go's defer statement."
categories = ["no-std", "rust-patterns"]
keywords = ["defer", "deferred", "go"]
license = "MIT"
repository = "https://github.com/rodrigocfd/defer-lite"
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE.md", "/README.md"]
edition = "2018"
